--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="title_rating">Rating: </string>
+    <string name="content_authority">android.abhik.movies</string>
+    <string name="sync_account_type">abhik.popularmovies.com</string>
+    <string name="isFavorite">isFavorite</string>
+    <string name="trailerUrl">trailerUrl</string>
 </resources>
